[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Buildings/Building.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=9]
extents = Vector3( 1, 0.25, 1 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.8, 0.25, 0.8 )

[sub_resource type="SphereMesh" id=11]
height = 0.6

[sub_resource type="Shader" id=8]
code = "/*
	走査シェーダー by あるる（きのもと 結衣）
	Scanning Shader by Yui Kinomoto @arlez80

	MIT License
*/

shader_type spatial;
render_mode unshaded;

const float PI = 3.1415926535;

uniform vec3 shift = vec3( 0.0, 0.0, 0.0 );
uniform vec3 time_shift_scale = vec3( 0.0, 0.0, 0.0 );
uniform vec4 scan_color : hint_color = vec4( 0.0, 1.0, 0.3, 1.0 );
uniform float scan_line_width : hint_range( 0.0, 1.0 ) = 0.1;
uniform float scan_line_size = 0.05;

varying vec3 local_vertex;

float get_ratio_scan_line( float p )
{
	return max(
		-sin( mod( p, scan_line_size ) / scan_line_size * PI ) + scan_line_width
	,	0.0
	) / scan_line_width;
}

void vertex( )
{
	local_vertex = VERTEX + shift + time_shift_scale * TIME;
}

void fragment( )
{
	float v = clamp(
		get_ratio_scan_line( local_vertex.x )
	+	get_ratio_scan_line( local_vertex.y )
	+	get_ratio_scan_line( local_vertex.z )
	,	0.0
	,	1.0
	);

	ALBEDO = scan_color.rgb;
	ALPHA = scan_color.a * v;
}
"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 8 )
shader_param/shift = Vector3( 0, 0, 0 )
shader_param/time_shift_scale = Vector3( 0.3, 0.2, 0.3 )
shader_param/scan_color = Color( 0.078431, 1, 1, 1 )
shader_param/scan_line_width = 0.5
shader_param/scan_line_size = 0.3

[node name="Building" type="StaticBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.25, -1 )
shape = SubResource( 9 )

[node name="Mesh" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1 )

[node name="CellDetection" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.25, -1 )

[node name="CollisionShape" type="CollisionShape" parent="CellDetection"]
shape = SubResource( 10 )

[node name="VisualSelector" type="MeshInstance" parent="."]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1.2, 1, 0, -1 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[connection signal="body_entered" from="CellDetection" to="." method="_on_CellDetection_body_entered"]
[connection signal="body_exited" from="CellDetection" to="." method="_on_CellDetection_body_exited"]
